# django-pay

./: .gitignore  .travis.yml  LICENSE-commercial.txt  LICENSE.commercial.txt  MANIFEST.in  README.md  README.rst  bank.py  crontab.txt  manage.py  pyproject.toml  requirements.txt  setup.py
pay/: __init__.py  admin.py  app_settings.py  constants.py  forms.py  models.py  paypal.py  realex.py  urls.py  utils.py  views.py
pay/management/commands/: process_recurring.py
pay/migrations/: 0001_initial.py  0002_receipt_empty_paycard.py  0003_cvv.py  0004_onupdate.py  0005_nondefault_autorenew.py
pay/static/pay/css/: pay.css
pay/static/pay/js/: pay.js
pay/templates/: base.html  index.html
pay/templates/pay/: add_card.html  base.html  base_payment.html  completed.html  duplicate.html  manage_cards.html  messages.html  nav.html  payment.html  paypal_ipn_test.html  plans.html  realex_request.xml  receipt.html  receipts.html  subscription.html
pay/tests/: test_models.py  test_settings.py  test_urls.py  test_views.py  tests.py
