[project]
name = "pay"
version = "2.2.6"
description = "Django payment credit and debit card Realex/Paypal subscriptions"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["realex", "paypal", "credit card", "django", "app", "subscriptions"]
authors = [
    {name = "F. Malina", email = "f@blocl.com"}
]
urls = {
    "Homepage" = "https://github.com/fmalina/django-pay"
}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]

dependencies = [
    "Django",
    "cryptography",
    "lxml",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pay" = [
    "**/templates/*",
    "**/static/*",
]

[tool.setuptools.dynamic]
packages = {include = ["pay*"]}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
